# LR8

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  cbindgen.toml  imtui.patch  ncurses.patch  setup_indices
jsondata/: 1_mappings.json  2_mappings.json  2_search.json
src/: backend_api.h  ffi.h  metamagic.cpp  qlastic.cpp  serializer.cpp  task1.cpp  task1_mainwindow.cpp  task2.cpp  task2_window.cpp
src/backend/: backend.rs  main.rs  task_1.rs  task_2.rs
src/frontend/: ffi.h  task1.cpp  ui.c  ui.h  widgets.c  widgets.h
src/include/: metaenum.h  metamagic.h  qlastic.h  serializer.h  task1_mainwindow.h  task1part.h  task2_window.h  task2book.h  window.h
