[package]
name = "LR8"
version = "0.1.0"
edition = "2021"

[lib]
name="lr8backend"
path = "src/backend/backend.rs"
crate-type = ["cdylib"]


[dependencies]
elasticsearch = "8.17.0-alpha.1"
env_logger = { version = "0.11.6", default-features = false, features = ["auto-color", "color", "humantime"] }
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive", "serde_derive"] }
serde_json = "1.0.133"
tokio = "1.42.0"
